# tomato-demo

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
data/: test_sensor.csv
data/embed/: model.json  model.pt
data/regression/: 수확수.ubj  착과수.ubj  초장.ubj  평균과중.ubj
src/: dataset.py  model.py  predictor.py
